--- a/banner/banner.conf
+++ b/banner/banner.conf
@@ -1,12 +1,12 @@
 </strong> <p style="text-align:center"><b> <br><font 
-color="#00FFE2"<br>┏━━━━━━━━━━━━━━━┓<br>𓆩×͜×𓆪‎⇶☞❈✿┋₮ó𝔭թļ𝓊ɠ⠀ᥫ᭡፝֟፝֟𓆩×͜×𓆪‎<br>┗━━━━━━━━━━━━━━━┛<br></font><br><font 
+color="#00FFE2"<br>┏━━━━━━━━━━━━━━━┓<br>𓆩×͜×𓆪‎⇶☞❈✿┋ℍεȥԹαէყ⠀ᥫ᭡፝֟፝֟𓆩×͜×𓆪‎<br>┗━━━━━━━━━━━━━━━┛<br></font><br><font 
 color="#00FF00"></strong> <p style="text-align:center"><b> <br><font 
 color="#00FFE2">क═══════क⊹⊱✫⊰⊹क═══════क</font><br><font 
-color='#FFFF00'><b> ★ [ ༆Hʸᵖᵉʳ᭄TOpPLUG MASTERS ] ★ 
+color='#FFFF00'><b> ★ [ ༆Hʸᵖᵉʳ᭄𝐈𝐓𝐒 𝐇𝐄𝐙𝐏𝐀𝐓𝐘 ] ★ 
 </b></font><br><font color="#FFF00">PREMIUM SCRIPT</font><br> <font color="#FF00FF"> No DDOS</font><br> 
 <font color="#FF0000">❖ No Torrent</font><br> <font 
-color="#FFB1C2">❖No Bokep </font><br> <font color="#FFFFFF">❖No 
+color="#FFB1C2">❖No porn </font><br> <font color="#FFFFFF">❖No 
 Hacking</font><br> <font color="#00FF00">❖No Mining</font><br> <font 
-color="#00FF00">▄︻デN̷E̷T̷W̷O̷R̷K̷ 𓆩×͜×𓆪‎⇶☞❈✿┋₮ó𝔭թļ𝓊ɠ⠀ᥫ᭡፝֟፝֟𓆩×͜×𓆪‎══━一 </font><br> <font 
+color="#00FF00">▄︻デN̷E̷T̷W̷O̷R̷K̷ 𓆩×͜×𓆪‎⇶☞❈✿┋ℍεȥԹαէყ⠀ᥫ᭡፝֟፝֟𓆩×͜×𓆪‎══━一 </font><br> <font 
 color="#00FFE2">क═══════क⊹⊱✫⊰⊹क═══════क</font><br></font><br><font 
-color="FFFF00">@T_OpPLUG</font><br>
+color="FFFF00">@hezpaty</font><br>
